fixed the server to expose ports externally

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,8 +1,8 @@
 version: '2'
 services:
-    metrix:
-        build: .
-        volumes:
-            - .:/usr/src/app
-        ports:
-            - "8000:8000"
+  metrix:
+    build: .
+    volumes:
+      - .:/home/rocket/
+    ports:
+      - "8000:8000"
