added diesel ORM and administration dependencies

--- a/metrix/Cargo.toml
+++ b/metrix/Cargo.toml
@@ -8,3 +8,5 @@ edition = "2018"
 
 [dependencies]
 rocket = "0.4.2"
+diesel = { version = "1.0.0", features = ["postgres"] }
+diesel_cli = { version = "1.4.0", features = ["postgres"] }
