--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,6 +7,8 @@ services:
     ports:
       - "8000:8000"
     environment:
+      DB_HOST: db
+      DB_PORT: 5432
       POSTGRES_USER: user
       POSTGRES_PASSWORD: stompy
       POSTGRES_DB: metrix
