--- a/metrix/Cargo.toml
+++ b/metrix/Cargo.toml
@@ -8,6 +8,8 @@ edition = "2018"
 
 [dependencies]
 rocket = "0.4.2"
+rocket_contrib = "0.4.2"
+serde = { version = "1.0", features = ["derive"] }
 diesel = { version = "1.0.0", features = ["postgres"] }
 diesel_migrations = "1.4.0"
 diesel_cli = { version = "1.4.0", features = ["postgres"] }
