--- a/metrix/Cargo.toml
+++ b/metrix/Cargo.toml
@@ -10,6 +10,7 @@ edition = "2018"
 rocket = "0.4.2"
 rocket_contrib = "0.4.2"
 serde = { version = "1.0", features = ["derive"] }
-diesel = { version = "1.0.0", features = ["postgres"] }
+serde_json = "1.0.41"
+diesel = { version = "1.0.0", features = ["postgres", "serde_json"] }
 diesel_migrations = "1.4.0"
 diesel_cli = { version = "1.4.0", features = ["postgres"] }
