--- a/metrix/Cargo.toml
+++ b/metrix/Cargo.toml
@@ -15,3 +15,4 @@ chrono = { version = "0.4.9", features = ["serde"] }
 diesel = { version = "1.0.0", features = ["postgres", "serde_json", "chrono"] }
 diesel_migrations = "1.4.0"
 diesel_cli = { version = "1.4.0", features = ["postgres"] }
+nom = "5.0.1"
