--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -2,7 +2,7 @@ version: 2.1
 jobs:
   build:
     docker: 
-      - image: circleci/rust
+      - image: nwoodger/rust-rocket
     steps:
       - checkout
       - run: make tests
