--- a/metrix/Cargo.toml
+++ b/metrix/Cargo.toml
@@ -16,3 +16,4 @@ diesel = { version = "1.0.0", features = ["postgres", "serde_json", "chrono"] }
 diesel_migrations = "1.4.0"
 diesel_cli = { version = "1.4.0", features = ["postgres"] }
 nom = "5.0.1"
+smallvec = { version = "1.3.0", features = ["const_generics"] }
