--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,7 +8,7 @@ edition = "2018"
 
 [dependencies]
 rocket = "0.4.2"
-rocket_contrib = "0.4.2"
+rocket_contrib = { version = "0.4.2", features = ["diesel_postgres_pool"] }
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0.41"
 chrono = { version = "0.4.9", features = ["serde"] }
